2010-04-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAlert.m (NSRunAlertPanel): Fix incorrect return code
	when called in a non-gui application.

2010-04-20 Doug Simons <doug.simons@testplant.com>

	* Headers/Additions/GNUstepGUI/GSWindowDecorationView.h:
	Update header to eliminate warning. 

2010-04-20 Doug Simons <doug.simons@testplant.com>

	* Source/NSWindow.m:
	* Source/GSWindowDecorationView.m:
	Fix problems with in-window menus sometimes overlapping toolbars or
	toolbars overlapping window contents. 

2010-04-19 Doug Simons <doug.simons@testplant.com>

	* Source/NSMatrix.m:
	Honor sendsActionOnEndEditing setting when editing ended by
	something other than return. 

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSBrowser.m:
	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Factor out browser
	header drawing to GSTheme.

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSScrollView.m:
	Add a new default, GSScrollViewNoInnerBorder, which can be set to
	YES so themes can disable drawing of the inner border lines in
	NSScrollView. These only look good with a NeXT style theme,
	so most non-NeXT-like themes (WinUX, etc.) will want to set
	GSScrollViewNoInnerBorder to YES.

2010-04-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSToolbarCustomizationPalette.m
	* Source/GSToolbarView.m
	removed c99isms

2010-04-15 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSegmentedCell.m:
	Fix some situations in initWithCoder: where the _selected_segment
	ivar and the selected state of items in the _items array could be
	out of sync leading to weirdly behaving segmented controls
	loaded from nibs.

2010-04-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextField.m (-textDidEndEditing:): When editing of a
	text field ends	after pressing the Return key and no (other) view
	has become first responder make the text field itself first